--- a/client/styles/variables.scss
+++ b/client/styles/variables.scss
@@ -1,10 +1,6 @@
 // Imports
 @import url('https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=EB+Garamond:ital,wght@0,400;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&display=swap');
 
-@font-face {
-  font-family: "Bismarck";
-  src: '/fonts/bismarck.ttf';
-}
 
 // Variables
 
@@ -23,7 +19,7 @@ $text-dark: rgb(31, 30, 30);
 
 // Fonts
 $font-basic: 'EB Garamond', serif;
-$font-headings: 'Bismarck', serif;
+$font-headings: 'DM Serif Display', serif;
 
 
 // ------
