--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -34,8 +34,8 @@ h1 {
     &__logo {
       position: absolute;
       max-width: $banner-logo-size;
-      // left: calc($banner-logo-size / -2);
-      // top: calc($banner-logo-size / -2.3);
+      left: calc($banner-logo-size / -2);
+      top: calc($banner-logo-size / -5);
     }
 
     &__feature {
@@ -62,4 +62,13 @@ h1 {
   background-color: red;
   width: 100%;
   height: 100%;
+}
+
+.form {
+  font-family: $font-basic;
+  color: $text-main;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
