--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -61,14 +61,15 @@ h1 {
 
 .ad-sidebar {
   background-color: $bg-main;
-  width: 100%;
+  max-width: 100%;
   height: 100vh;
-  // margin: 20px;
+  margin: 20px;
   padding: 20px;
   border-radius: 20px;
 }
 
 .form {
+  margin-top: 20px;
   font-family: $font-basic;
   color: $text-main;
   display: flex;
