--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -82,6 +82,19 @@ h1 {
 .form button {
   margin: 10px;
   padding: 10px;
+  color: $text-main;
+  background-color: $bg-light;
+  border: 3px solid $text-main;
+  border-radius: 5px;
+}
+
+.form input {
+  padding: 10px;
+  margin: 0px 15px 0px 15px;
+}
+
+.form button:hover {
+  background-color: $highlight;
 }
 
 #orb {
