--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -16,7 +16,7 @@ body {
   margin: 0px;
 }
 
-h1 {
+h2 {
   font-family: $font-headings;
 }
 
@@ -75,13 +75,17 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  // justify-content: center;
   padding: 30px, 30px, 30px, 30px;
+  font-size: 1.2rem;
+  line-height: 1.4;
 }
 
 .form button {
   margin: 10px;
   padding: 10px;
+  font-size: 1.2rem;
+  line-height: 1.4;
+  font-family: inherit;
   color: $text-main;
   background-color: $bg-light;
   border: 3px solid $text-main;
@@ -100,4 +104,10 @@ h1 {
 #orb {
   padding: 10px;
   max-width: 100px;
+}
+
+.form p {
+  padding: 20px;
+  background-color: $bg-main;
+  border-radius: 10px;
 }
