--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -66,7 +66,15 @@ h2 {
   margin: 20px;
   padding: 20px;
   border-radius: 20px;
+  font-size: 0.6rem;
+  color: rgba(255, 255, 255, 0.477);
 }
+
+.ad-sidebar img {
+  max-width: 100%;
+}
+
+
 
 .form {
   margin-top: 20px;
@@ -110,4 +118,8 @@ h2 {
   padding: 20px;
   background-color: $bg-main;
   border-radius: 10px;
+}
+
+h1 {
+  margin-top: 0px;
 }
