--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -74,8 +74,6 @@ h2 {
   max-width: 100%;
 }
 
-
-
 .form {
   margin-top: 20px;
   font-family: $font-basic;
@@ -86,6 +84,12 @@ h2 {
   padding: 30px, 30px, 30px, 30px;
   font-size: 1.2rem;
   line-height: 1.4;
+}
+
+.form .option {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .form button {
@@ -116,7 +120,7 @@ h2 {
 
 .form p {
   padding: 20px;
-  background-color: $bg-main;
+  background-color: $text-bg;
   border-radius: 10px;
 }
 
